--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Stopwatch</title>
+  <title>Stopwatch</title>
+  <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
   <script src="app.js" defer></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="stopwatch-container">
+    <h1 class="heading">StopWatch</h1>
     <div class="stopwatch">
       <div class="display" id="display">
           <span id="hours">00</span>:<span id="mins">00</span>:<span id="sec">00</span>
@@ -22,5 +24,8 @@
   </div>
 </body>
 </html>
+
+
+
 
 
